# randl_client

./: Client_Example.ipynb  README.md  Randl_Client_Example_Notebook.ipynb  Randl_Client_Example_Use.ipynb  Randl_Example.ipynb  Randl_Example_API.ipynb  __init__.py  pyproject.toml  randl_client.py  requirements.txt  setup.py
randl_client/: __init__.py  constant_vars.py  randl_client.py  util.py
