[project]
name = "randl_client"
description = "Randl Client"
version = "0.1"
authors = [
    { name = "GTC Analytics", email = "jpace@gtcanalytics.com" }
]
dynamic = ["dependencies"]

requires-python = ">=3.8"
[tool.setuptools.dynamic]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
